# reelwithcontext

./: .gitignore  README.md  pyproject.toml  reelwithcontext.tgz
reelctxt/: cli.py
reelctxt/ingestion/: crawler.py  image_loader.py  text_loader.py
reelctxt/llm/: client.py
reelctxt/media/: compose.py  kenburns.py  tts.py
reelctxt/planning/: segment.py  selector.py  storyboard.py  summarizer.py
reelctxt/tests/: test_segments.py
reelctxt/util/: logging.py
tests/: test_compose_signature.py  test_imports.py
